@@ -1,5 +1,6 @@
 14 March 2016: Wouter
 	- Fix warnings in ifdef corner case, older or unknown libevent.
+	- Fix compile for ub_event code with older libev.
 
 11 March 2016: Wouter
 	- Remove warning about unused parameter in event_pluggable.c.
